Add GET /lists/{listID} to OpenAPI spec
